[tool.poetry]
name = "nea_outage_reporter_backend"
version = "0.1.0"
description = ""
authors = ["Pravesh Chapagain <spravesh1818@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
flask = "^1.1.2"
pandas = "^1.1.2"
xlrd = "^1.2.0"

[tool.poetry.dev-dependencies]
flask-sqlalchemy = "^2.4.4"
flask-migrate = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
